                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0

  *) mod_proxy: enable Ignore Errors option on ProxyPass Status.
     PR 43167 [Francisco Gimeno <kikov kikov.org>

  *) mod_proxy_http: Don't try to read body of a HEAD request before
     responding.
     PR 41644 [Stuart Children <stuart terminus.co.uk>]

  *) mod_autoindex: Add in Type and Charset options to
     IndexOptions directive. This allows the admin to explicitly
     set the content-type and charset of the generated page.
     [Jim Jagielski]

  *) mime.types: Many updates to sync with IANA registry and common
     unregistered types that the owners refuse to register.  Admins
     are encouraged to update their installed mime.types file.
     PR: 35550, 37798, 39317, 31483 [Roy T. Fielding]

  *) log core: ensure we use a special pool for stderr logging, so that
     the stderr channel remains valid from the time plog is destroyed,
     until the time the open_logs hook is called again.  [William Rowe]

  *) main core: Emit errors during the initial apr_app_initialize()
     or apr_pool_create() (when apr-based error reporting is not ready).
     [William Rowe, Jeff Trawick]

  *) mpm_winnt: Prevent the parent-child pipe from leaking into other
     spawned processes, and ensure we have a /Device/null handle for
     stdout when running as-a-service.  [William Rowe]

  *) log core: fix the new piped logger case where we couldn't connect 
     the replacement stderr logger's stderr to the NULL stdout stream.  
     Continue in this case, since the previous alternative of no error 
     logging at all (/dev/null) is far worse. [William Rowe]

  *) mod_ldap: Avoid possible crashes, hangs, and busy loops due to
     improper merging of the cache lock in vhost config
     PR 43164 [Eric Covener]

  *) mod_negotiation: preserve Query String in resolving a type map
     PR 33112 [Jørgen Thomsen <apache jth.net>, Nick Kew]
